# embed

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  examples.yml
cmake/: embed.cmake
examples/: CMakeLists.txt
examples/binaryfile/: CMakeLists.txt
examples/binaryfile/src/: main.cpp
examples/filewatcher/: CMakeLists.txt
examples/filewatcher/resources/: config.json
examples/filewatcher/src/: main.cpp
examples/generatedfile/: .gitignore  CMakeLists.txt
examples/generatedfile/src/: main.cpp
examples/multifile/: CMakeLists.txt
examples/multifile/resources/: message.txt
examples/multifile/resources/FirstFolder/: config.json
examples/multifile/resources/FirstFolder/templates/: template.txt
examples/multifile/src/: main.cpp
examples/multitarget/: CMakeLists.txt
examples/multitarget/resources/: message.txt
examples/multitarget/resources/FirstFolder/: config.json
examples/multitarget/src/: main.cpp  target1.cpp  target2.cpp  target3.cpp
examples/simple/: CMakeLists.txt
examples/simple/resources/: banner.txt
examples/simple/resources/data/: message.txt
examples/simple/src/: main.cpp
examples/subdirectory/: CMakeLists.txt
examples/subdirectory/resources/: CMakeLists.txt
examples/subdirectory/resources/another subdir/: banner.txt
examples/subdirectory/src/: main.cpp
scripts/: embed.py
templates/: header.hpp  source.cpp
